--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
+PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
+PDF_MAX_BODY_MB=5
+PDF_REMOTE_TIMEOUT_MS=90000
