added the zoho crm api

--- a/.env.example
+++ b/.env.example
@@ -22,13 +22,13 @@ PDF_HEADER_TEMPLATE_PATH=./templates/customer-header.tex
 # Get these from: https://api-console.zoho.com/
 
 # Zoho OAuth Credentials
-ZOHO_CLIENT_ID=your_zoho_client_id_here
-ZOHO_CLIENT_SECRET=your_zoho_client_secret_here
-ZOHO_REFRESH_TOKEN=your_zoho_refresh_token_here
+ZOHO_CLIENT_ID=1000.ILIV6Q7W77NXS6UTM83VDYOFXLR4NZ
+ZOHO_CLIENT_SECRET=5edd541c9d7fc549acad1e1524e5ef1a6c18304157
+ZOHO_REFRESH_TOKEN=1000.98fed5c7564d68bf347d291e624aa289.b7f06d114136e6cdab5786763c3b4c5f
 
 # Zoho API URLs
-ZOHO_BIGIN_API_URL=https://www.zohoapis.com/bigin/v1
-ZOHO_CRM_API_URL=https://www.zohoapis.com/crm/v3
+ZOHO_ACCOUNTS_BASE=https://accounts.zoho.in
+ZOHO_BIGIN_API_URL=https://www.zohoapis.in/bigin/v2
 
 # ================================
 # Server Configuration
