--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
+MONGO_URI=mongodb+srv://vanamayaswanth1_db_user:NzvLPS9c2KO02tDz@cluster0.f1kzy9b.mongodb.net/enviro_master?retryWrites=true&w=majority
 PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
+# MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
