--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_URI=mongodb+srv://vanamayaswanth1_db_user:NzvLPS9c2KO02tDz@cluster0.f1kzy9b.mongodb.net/enviro_master?retryWrites=true&w=majority
+MONGO_DB=enviro_master
 PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
-# MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
+# Local MongoDB fallback (uncomment if Atlas is not working):
+# MONGO_URI=mongodb://127.0.0.1:27017/enviro_master
