zohoi upload is working

--- a/.env
+++ b/.env
@@ -3,5 +3,16 @@ MONGO_DB=enviro_master
 PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
+
+# Zoho Integration Credentials
+ZOHO_CLIENT_ID=1000.ILIV6Q7W77NXS6UTM83VDYOFXLR4NZ
+ZOHO_CLIENT_SECRET=5edd541c9d7fc549acad1e1524e5ef1a6c18304157
+ZOHO_REFRESH_TOKEN=1000.d116a597ac33128c9e354b32b0e67f99.34b50801d99f8c032068a19a30d95d28
+
+# Zoho API URLs (using India data center)
+ZOHO_BIGIN_API_URL=https://www.zohoapis.in/bigin/v2
+ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3
+ZOHO_ACCESS_TOKEN=1000.eb3f2ac0d3858b4b5e5abd3282a7139b.6d339d9198a40810644f27bb51dec745
+
 # Local MongoDB fallback (uncomment if Atlas is not working):
 # MONGO_URI=mongodb://127.0.0.1:27017/enviro_master
