--- a/.env
+++ b/.env
@@ -1,18 +1,27 @@
+# ---------- Mongo / PDF (no change) ----------
 MONGO_URI=mongodb+srv://vanamayaswanth1_db_user:NzvLPS9c2KO02tDz@cluster0.f1kzy9b.mongodb.net/enviro_master?retryWrites=true&w=majority
 MONGO_DB=enviro_master
+
 PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
 
-# Zoho Integration Credentials
-ZOHO_CLIENT_ID=1000.ILIV6Q7W77NXS6UTM83VDYOFXLR4NZ
-ZOHO_CLIENT_SECRET=5edd541c9d7fc549acad1e1524e5ef1a6c18304157
-ZOHO_REFRESH_TOKEN=1000.d116a597ac33128c9e354b32b0e67f99.34b50801d99f8c032068a19a30d95d28
+# ---------- Zoho Bigin – DEV (your org) ----------
+# 1) From API Console screenshot
+ZOHO_CLIENT_ID=1000.QUY8D33Y3JRV9LS7WZTD0ZH7JH5G1P
+ZOHO_CLIENT_SECRET=c47879e685420bfb2e54224700cbef2f84e1e69d71
 
-# Zoho API URLs (using India data center)
+# 2) India data center accounts + APIs
+ZOHO_ACCOUNTS_URL=https://accounts.zoho.in
 ZOHO_BIGIN_API_URL=https://www.zohoapis.in/bigin/v2
-ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3
-ZOHO_ACCESS_TOKEN=1000.eb3f2ac0d3858b4b5e5abd3282a7139b.6d339d9198a40810644f27bb51dec745
+ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3   # (not used now, but ok to keep)
 
-# Local MongoDB fallback (uncomment if Atlas is not working):
+# 3) OAuth redirect (must match in API Console > Settings)
+ZOHO_REDIRECT_URI=http://localhost:5000/oauth/callback
+
+# 4) Tokens – LEAVE EMPTY FOR NOW, we will regenerate for this org
+ZOHO_REFRESH_TOKEN=
+# ZOHO_ACCESS_TOKEN=
+
+# ---------- Optional local Mongo fallback ----------
 # MONGO_URI=mongodb://127.0.0.1:27017/enviro_master
