--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ PDF_HEADER_TEMPLATE_PATH=./templates/customer-header.tex
 ZOHO_CLIENT_ID=1000.ILIV6Q7W77NXS6UTM83VDYOFXLR4NZ
 ZOHO_CLIENT_SECRET=5edd541c9d7fc549acad1e1524e5ef1a6c18304157
 ZOHO_REFRESH_TOKEN=1000.98fed5c7564d68bf347d291e624aa289.b7f06d114136e6cdab5786763c3b4c5f
+ZOHO_REDIRECT_URI=http://localhost:5000/oauth/callback
 
 # Zoho API URLs
 ZOHO_ACCOUNTS_BASE=https://accounts.zoho.in
