This is zoho v2

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3   # (not used now, but ok to kee
 ZOHO_REDIRECT_URI=http://localhost:5000/oauth/callback
 
 # 4) Tokens – LEAVE EMPTY FOR NOW, we will regenerate for this org
-ZOHO_REFRESH_TOKEN=
+ZOHO_REFRESH_TOKEN=1000.becf67b799c2965598b4dff9410d039b.2c147e305462e715bd57d2c7ecea27bc
 # ZOHO_ACCESS_TOKEN=
 
 # ---------- Optional local Mongo fallback ----------
