Email compose added

--- a/.env
+++ b/.env
@@ -25,3 +25,14 @@ ZOHO_REFRESH_TOKEN=1000.becf67b799c2965598b4dff9410d039b.2c147e305462e715bd57d2c
 
 # ---------- Optional local Mongo fallback ----------
 # MONGO_URI=mongodb://127.0.0.1:27017/enviro_master
+
+# ---------- Email Configuration (SMTP) ----------
+# Replace these with your actual email service credentials
+EMAIL_SERVICE=gmail
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-specific-password
+EMAIL_FROM_NAME=EnviroMaster NVA
+EMAIL_FROM_ADDRESS=noreply@enviromasternva.com
