--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "mustache": "^4.2.0",
+    "nodemailer": "^7.0.12",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
