--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,10 @@ PDF_HEADER_TEMPLATE_PATH=./templates/customer-header.tex
 # Get these from: https://api-console.zoho.com/
 
 # Zoho OAuth Credentials
-ZOHO_CLIENT_ID=1000.ILIV6Q7W77NXS6UTM83VDYOFXLR4NZ
-ZOHO_CLIENT_SECRET=5edd541c9d7fc549acad1e1524e5ef1a6c18304157
-ZOHO_REFRESH_TOKEN=1000.98fed5c7564d68bf347d291e624aa289.b7f06d114136e6cdab5786763c3b4c5f
+ZOHO_CLIENT_ID=1000.UX0K3FO7H0RT05OVTMJKLYFJG1PK8J
+ZOHO_CLIENT_SECRET=d46092a464cf2e1312c487d9a376ddd527560ee699
+ZOHO_REFRESH_TOKEN=1000.sbsrbtdnfvsddbsfngsrhs
+# ZOHO_REFRESH_TOKEN=1000.9b88b57af4f9c64169eaa528a9abeb81.705bfa6ba230d47a235429ef72482b63
 ZOHO_REDIRECT_URI=http://localhost:5000/oauth/callback
 
 # Zoho API URLs
