Email sending working with testing also

--- a/.env
+++ b/.env
@@ -29,11 +29,21 @@ ZOHO_REFRESH_TOKEN=1000.8d0321c0d20a3ad9510702f16f4ed005.2b87fb7ed88fa12be4df88e
 
 # ---------- Email Configuration (SMTP) ----------
 # Replace these with your actual email service credentials
-EMAIL_SERVICE=gmail
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-specific-password
+# EMAIL_SERVICE=gmail
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_SECURE=false
+# EMAIL_USER=hvanama@enviromasternva.com
+# EMAIL_PASSWORD=
+# EMAIL_FROM_NAME=EnviroMaster NVA
+# EMAIL_FROM_ADDRESS=hvanama@enviromasternva.com
+
+
+EMAIL_HOST=enviromasternva.com
+EMAIL_PORT=465
+EMAIL_SECURE=true
+
+EMAIL_USER=hvanama@enviromasternva.com
+EMAIL_PASSWORD=Satyavani@123 
 EMAIL_FROM_NAME=EnviroMaster NVA
-EMAIL_FROM_ADDRESS=noreply@enviromasternva.com
+EMAIL_FROM_ADDRESS=hvanama@enviromasternva.com
