This changes for deploy in cpanel

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,10 @@ MONGO_DB=enviro_master
 # ============================================================================
 # PDF SERVICE CONFIGURATION
 # ============================================================================
-PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
+# ⚠️ IMPORTANT: Do NOT include /pdf at the end! The code adds the path automatically.
+# CORRECT: http://142.93.213.187:3000
+# WRONG: http://142.93.213.187:3000/pdf (causes double /pdf/pdf/ in URL)
+PDF_REMOTE_BASE=http://142.93.213.187:3000
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
 
