--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@
 # ENVIRONMENT & SERVER CONFIGURATION
 # ============================================================================
 NODE_ENV=production
+# ⚠️ cPanel will set this automatically - DO NOT set a fixed PORT
+# The server.js file already uses: const PORT = process.env.PORT || 5000
 PORT=5000
 
-# ⚠️ IMPORTANT: Update this AFTER deploying to Render
-# Example: https://enviromaster-backend.onrender.com (NO trailing slash)
-SERVER_URL=https://your-app-name.onrender.com
+# ⚠️ CPANEL: Update this with your subdomain after setup
+# Example: https://server.enviromasternva.com (NO trailing slash)
+SERVER_URL=https://server.enviromasternva.com
 
 # ============================================================================
 # DATABASE CONFIGURATION (MongoDB Atlas)
@@ -17,7 +19,10 @@ MONGO_DB=enviro_master
 # ============================================================================
 # PDF SERVICE CONFIGURATION
 # ============================================================================
-PDF_REMOTE_BASE=http://142.93.213.187:3000/pdf
+# ⚠️ IMPORTANT: Do NOT include /pdf at the end! The code adds the path automatically.
+# CORRECT: http://142.93.213.187:3000
+# WRONG: http://142.93.213.187:3000/pdf (causes double /pdf/pdf/ in URL)
+PDF_REMOTE_BASE=http://142.93.213.187:3000
 PDF_MAX_BODY_MB=5
 PDF_REMOTE_TIMEOUT_MS=90000
 
@@ -33,10 +38,10 @@ ZOHO_ACCOUNTS_URL=https://accounts.zoho.in
 ZOHO_BIGIN_API_URL=https://www.zohoapis.in/bigin/v2
 ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3
 
-# ⚠️ IMPORTANT: Update this AFTER deploying to Render
-# Example: https://enviromaster-backend.onrender.com/oauth/callback
+# ⚠️ CPANEL: Update this with your subdomain after setup
+# Example: https://server.enviromasternva.com/oauth/callback
 # This MUST match the redirect URI in Zoho API Console
-ZOHO_REDIRECT_URI=http://localhost:5000/oauth/callback
+ZOHO_REDIRECT_URI=https://server.enviromasternva.com/oauth/callback
 
 # Zoho refresh token (will be regenerated after OAuth flow on production)
 # Current token is for development - regenerate in production by visiting:
@@ -64,11 +69,12 @@ JWT_EXPIRES_IN=7d
 # ============================================================================
 # CORS CONFIGURATION
 # ============================================================================
-# ⚠️ IMPORTANT: Update this AFTER deploying frontend to Render
-# Example: https://enviromaster-frontend.onrender.com
+# ⚠️ CPANEL: Update this with your frontend URLs
+# Production frontend: https://enviromasternva.com
+# Agreement subfolder: https://enviromasternva.com/agreement
 # Multiple origins: https://frontend1.com,https://frontend2.com
 # For local development, also include: http://localhost:5173,http://localhost:3000
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+ALLOWED_ORIGINS=https://enviromasternva.com,http://localhost:5173,http://localhost:3000
 
 # ============================================================================
 # LOGGING & MONITORING
@@ -76,28 +82,30 @@ ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 LOG_LEVEL=info
 
 # ============================================================================
-# DEPLOYMENT NOTES
+# DEPLOYMENT NOTES - cPanel Deployment
 # ============================================================================
 #
-# BEFORE DEPLOYING TO RENDER:
+# BEFORE DEPLOYING TO CPANEL:
 # 1. ✅ MongoDB Atlas - Already configured correctly
 # 2. ✅ Email credentials - Already configured correctly
 # 3. ✅ Zoho credentials - Already configured correctly
 # 4. ✅ JWT_SECRET - Already generated (strong 128-char secret)
+# 5. ✅ SERVER_URL - Set to https://server.enviromasternva.com
+# 6. ✅ ZOHO_REDIRECT_URI - Set to https://server.enviromasternva.com/oauth/callback
+# 7. ✅ ALLOWED_ORIGINS - Set to https://enviromasternva.com (your frontend)
 #
-# AFTER DEPLOYING TO RENDER (Update these in Render Dashboard):
-# 1. ⚠️ SERVER_URL → Set to your Render backend URL
-#    Example: https://enviromaster-backend.onrender.com
-#
-# 2. ⚠️ ZOHO_REDIRECT_URI → Set to your Render backend OAuth callback
-#    Example: https://enviromaster-backend.onrender.com/oauth/callback
-#    IMPORTANT: Also update this in Zoho API Console!
-#
-# 3. ⚠️ ALLOWED_ORIGINS → Set to your Render frontend URL
-#    Example: https://enviromaster-frontend.onrender.com
-#    Can include multiple: https://frontend.onrender.com,https://www.yourdomain.com
-#
-# 4. 🔄 Complete OAuth flow to regenerate ZOHO_REFRESH_TOKEN:
-#    Visit: https://your-backend.onrender.com/oauth/zoho/auth
+# CPANEL DEPLOYMENT STEPS:
+# 1. Upload backend code to: ~/nodeapps/enviro-backend/
+# 2. In cPanel "Setup Node.js App":
+#    - Application root: nodeapps/enviro-backend
+#    - Application URL: server.enviromasternva.com
+#    - Application startup file: server.js
+#    - Node.js version: 18 or 20 (latest available)
+# 3. Add all environment variables from this file to cPanel
+# 4. Run NPM Install
+# 5. Start the application
+# 6. Update Zoho API Console redirect URI to match production URL
+# 7. Regenerate ZOHO_REFRESH_TOKEN by visiting:
+#    https://server.enviromasternva.com/oauth/zoho/auth
 #
 # ============================================================================
