digital ocean setup

--- a/.env
+++ b/.env
@@ -2,13 +2,12 @@
 # ENVIRONMENT & SERVER CONFIGURATION
 # ============================================================================
 NODE_ENV=production
-# ⚠️ cPanel will set this automatically - DO NOT set a fixed PORT
-# The server.js file already uses: const PORT = process.env.PORT || 5000
+# Digital Ocean will use default port 5000 (configure Nginx reverse proxy)
 PORT=5000
 
-# ⚠️ CPANEL: Update this with your subdomain after setup
-# Example: https://server.enviromasternva.com (NO trailing slash)
-SERVER_URL=https://server.enviromasternva.com
+# ⚠️ DIGITAL OCEAN: Update this with your server IP or domain
+# Example: http://your-droplet-ip:5000 OR https://api.enviromasternva.com (with Nginx SSL)
+SERVER_URL=http://YOUR_DROPLET_IP:5000
 
 # ============================================================================
 # DATABASE CONFIGURATION (MongoDB Atlas)
@@ -38,10 +37,10 @@ ZOHO_ACCOUNTS_URL=https://accounts.zoho.in
 ZOHO_BIGIN_API_URL=https://www.zohoapis.in/bigin/v2
 ZOHO_CRM_API_URL=https://www.zohoapis.in/crm/v3
 
-# ⚠️ CPANEL: Update this with your subdomain after setup
-# Example: https://server.enviromasternva.com/oauth/callback
+# ⚠️ DIGITAL OCEAN: Update this with your server URL
+# Example: http://your-droplet-ip:5000/oauth/callback OR https://api.enviromasternva.com/oauth/callback
 # This MUST match the redirect URI in Zoho API Console
-ZOHO_REDIRECT_URI=https://server.enviromasternva.com/oauth/callback
+ZOHO_REDIRECT_URI=http://YOUR_DROPLET_IP:5000/oauth/callback
 
 # Zoho refresh token (will be regenerated after OAuth flow on production)
 # Current token is for development - regenerate in production by visiting:
@@ -69,10 +68,9 @@ JWT_EXPIRES_IN=7d
 # ============================================================================
 # CORS CONFIGURATION
 # ============================================================================
-# ⚠️ CPANEL: Update this with your frontend URLs
+# ⚠️ DIGITAL OCEAN: Update this with your frontend URLs
 # Production frontend: https://enviromasternva.com
-# Agreement subfolder: https://enviromasternva.com/agreement
-# Multiple origins: https://frontend1.com,https://frontend2.com
+# Multiple origins separated by comma
 # For local development, also include: http://localhost:5173,http://localhost:3000
 ALLOWED_ORIGINS=https://enviromasternva.com,http://localhost:5173,http://localhost:3000
 
@@ -82,30 +80,41 @@ ALLOWED_ORIGINS=https://enviromasternva.com,http://localhost:5173,http://localho
 LOG_LEVEL=info
 
 # ============================================================================
-# DEPLOYMENT NOTES - cPanel Deployment
+# DEPLOYMENT NOTES - Digital Ocean Deployment
 # ============================================================================
 #
-# BEFORE DEPLOYING TO CPANEL:
+# BEFORE DEPLOYING TO DIGITAL OCEAN:
 # 1. ✅ MongoDB Atlas - Already configured correctly
 # 2. ✅ Email credentials - Already configured correctly
 # 3. ✅ Zoho credentials - Already configured correctly
 # 4. ✅ JWT_SECRET - Already generated (strong 128-char secret)
-# 5. ✅ SERVER_URL - Set to https://server.enviromasternva.com
-# 6. ✅ ZOHO_REDIRECT_URI - Set to https://server.enviromasternva.com/oauth/callback
+# 5. ⚠️ SERVER_URL - UPDATE with your droplet IP or domain
+# 6. ⚠️ ZOHO_REDIRECT_URI - UPDATE to match your server URL
 # 7. ✅ ALLOWED_ORIGINS - Set to https://enviromasternva.com (your frontend)
 #
-# CPANEL DEPLOYMENT STEPS:
-# 1. Upload backend code to: ~/nodeapps/enviro-backend/
-# 2. In cPanel "Setup Node.js App":
-#    - Application root: nodeapps/enviro-backend
-#    - Application URL: server.enviromasternva.com
-#    - Application startup file: server.js
-#    - Node.js version: 18 or 20 (latest available)
-# 3. Add all environment variables from this file to cPanel
-# 4. Run NPM Install
-# 5. Start the application
-# 6. Update Zoho API Console redirect URI to match production URL
-# 7. Regenerate ZOHO_REFRESH_TOKEN by visiting:
-#    https://server.enviromasternva.com/oauth/zoho/auth
+# DIGITAL OCEAN DEPLOYMENT STEPS:
+# 1. Create Ubuntu droplet (recommended: 2GB RAM, $12/month)
+# 2. SSH into droplet: ssh root@your-droplet-ip
+# 3. Install Node.js 18 or 20:
+#    curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+#    sudo apt-get install -y nodejs
+# 4. Install PM2 (process manager):
+#    sudo npm install -g pm2
+# 5. Upload backend code to: /var/www/enviro-backend/
+# 6. Install dependencies:
+#    cd /var/www/enviro-backend
+#    npm install --production
+# 7. Copy this .env file to server and update:
+#    - SERVER_URL with your droplet IP
+#    - ZOHO_REDIRECT_URI with your droplet IP
+# 8. Start app with PM2:
+#    pm2 start server.js --name enviro-backend
+#    pm2 save
+#    pm2 startup
+# 9. Configure Nginx reverse proxy (optional but recommended):
+#    - See DIGITAL_OCEAN_DEPLOYMENT.md for full guide
+# 10. Update Zoho API Console redirect URI to match production URL
+# 11. Regenerate ZOHO_REFRESH_TOKEN by visiting:
+#     http://your-droplet-ip:5000/oauth/zoho/auth
 #
 # ============================================================================
