digital ocean setup finished

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,21 @@ pids/
 .parcel-cache
 
 # ============================================================================
+# DOCKER & CONTAINERS
+# ============================================================================
+# Docker volumes
+.docker/
+docker-compose.override.yml
+
+# ============================================================================
+# PM2 PROCESS MANAGER
+# ============================================================================
+# PM2 runtime files
+.pm2/
+pm2.log
+ecosystem.config.js.backup
+
+# ============================================================================
 # PROJECT-SPECIFIC EXCLUSIONS
 # ============================================================================
 # Uploaded files (if stored locally - should use cloud storage in production)
