--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "start:pm2": "pm2 start ecosystem.config.cjs --env production",
+    "stop:pm2": "pm2 stop ecosystem.config.cjs",
+    "restart:pm2": "pm2 restart ecosystem.config.cjs",
+    "logs:pm2": "pm2 logs enviro-backend",
+    "monitor:pm2": "pm2 monit",
+    "test": "echo \"No tests specified\" && exit 0",
+    "build:docker": "docker build -t enviro-backend .",
+    "run:docker": "docker run -p 5000:5000 --env-file .env enviro-backend"
   },
   "dependencies": {
     "axios": "^1.13.2",
