env file updated

--- a/.env
+++ b/.env
@@ -72,7 +72,7 @@ JWT_EXPIRES_IN=7d
 # Production frontend: https://enviromasternva.com
 # Multiple origins separated by comma
 # For local development, also include: http://localhost:5173,http://localhost:3000
-ALLOWED_ORIGINS=https://enviromasternva.com,http://localhost:5173,http://localhost:3000,https://enviromaster.vercel.app/
+ALLOWED_ORIGINS=https://enviromasternva.com,http://localhost:5173,http://localhost:3000,https://enviromaster.vercel.app
 
 # ============================================================================
 # LOGGING & MONITORING
